Refined UI, added ability to save/load/export/restore loadouts to/from lists, changed case used in lookups